devops/kubernetes/base/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ehr-platform
  labels:
    name: ehr-platform
